--- a/fswatchdog/fswatchdog-core/pom.xml
+++ b/fswatchdog/fswatchdog-core/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>de.sk9.commons</groupId>
@@ -24,18 +22,17 @@
 			<artifactId>log4j-api</artifactId>
 			<version>${log4j.platform.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.methvin</groupId>
+			<artifactId>directory-watcher</artifactId>
+			<version>0.15.0</version>
+		</dependency>
 
 		<!-- Test Dependencies -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
 			<version>${log4j.platform.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.32</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
